Fixed performance issue under the load its not performing well
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>